--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">arkango.github.io</h1>
+        <h1 class="header">arkango</h1>
         <p class="header"></p>
 
         <ul>
@@ -45,9 +45,10 @@
       </header>
 
       <section>
+      <p>Just a personal blog with projects and researches.</p>
       <h2>CVE-2020</h2>
-      <p><b>CVE-2020-35748</b></p>
-      <p><b>CVE-2020-35749</b></p>
+      <p><b>CVE-2020-35748</b><a href="/CVE-2020/CVE-2020-35748 xss FV Flowplayer Video Player Wordpress plugin.html">Authenticated Cross-Site Scripting (XSS) FV Flowplayer Video Player Wordpress plugin version prior to 7.4.38.727</a></p>
+      <p><b>CVE-2020-35749</b><a href="/CVE-2020/CVE-2020-35749 DIr. Traversal Simple Board Job Wordpress plugin.html">Authenticated DIr. Traversal Simple Board Job Wordpress plugin version prior to 2.9.3</a></p>
       </section>
 
       <footer>
