--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <p>Just a personal blog with projects and researches.</p>
         
               <h2>CVE-2022</h2>  
-        <p></p>
+              <p><b>CVE-2022-23965  </b><a href="https://github.com/emposha/FCBKcomplete/issues/156"> Cross-Site Scripting (XSS) - Dom Based in FCBKcomplete jQuey project</a></p>
+
       <h2>CVE-2021</h2>  
         <p></p>
         
@@ -60,6 +61,7 @@
         <p><b>Cyber Attack and Defense Simulation in a Drone
 </b><a href="https://docs.google.com/document/d/e/2PACX-1vTT5D7e8JnWIcITyS07CcBhMQVwEMI5Y9FvPuFmAV6ZtwDDqj8VoPdnYLQsbTmsQ8_Z-Ltn_zby0IOL/pub" > How to take down a drone (ita)
         </a></p>
+        <p><a href="tesi.pdf">Tesi ITA drone cyber killchain with protrotype</a><p>
       </section>
 
       <footer>
