--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
       <section>
       <p>Just a personal blog with projects and researches.</p>
-        
+          <h2>CVE-2023</h2>  
+              <p><b>CVE-2023-46496  </b><a href="https://github.com/CapgeminiCisRedTeam/Disclosure/blob/main/CVE%20PoC/CVE-2023-46496%20%7C%20Audimex%20(XSS).md"> Reflected Cross-Site Scripting (XSS) - Audimex 15.0.0 </a></p>
+
               <h2>CVE-2022</h2>  
               <p><b>CVE-2022-23965  </b><a href="https://github.com/emposha/FCBKcomplete/issues/156"> Cross-Site Scripting (XSS) - Dom Based in FCBKcomplete jQuey project</a></p>
 
@@ -58,9 +60,14 @@
       <p><b>CVE-2020-35749 </b><a href="/CVE-2020/CVE-2020-35749 DIr. Traversal Simple Board Job Wordpress plugin.html">Authenticated DIr. Traversal Simple Board Job Wordpress plugin version prior to 2.9.3</a></p>
       <h2>Youtube courses</h2>
         <p><b>IoT Hacking
-</b><a href="https://www.youtube.com/watch?v=9tI6LR4RCMQ&list=PLPc5glBiLyN6aEaCzdLsUkvGvh8Y9rFID" > Youtube series (ita)
+</b>
+         <p> <a href="https://www.youtube.com/watch?v=9tI6LR4RCMQ&list=PLPc5glBiLyN6aEaCzdLsUkvGvh8Y9rFID" > Youtube series (ita)
         </a></p>
-        <p><a href="https://github.com/Arkango/iot_hacking_youtube_securitycert">IoT Hacking repository</a></p>
+                <p><a href="https://github.com/Arkango/iot_hacking_youtube_securitycert">IoT Hacking repository</a></p>
+       <p> <a href="Body Fat Scale reversing.pdf" > BLE (Bluethoot Low Energy) Body Fat Scale Reverse Engineering
+        </a></p>
+        </p>
+
         <h2>Computer Science Thesis</h2>
         <p><b>Cyber Attack and Defense Simulation in a Drone
 </b><a href="https://docs.google.com/document/d/e/2PACX-1vTT5D7e8JnWIcITyS07CcBhMQVwEMI5Y9FvPuFmAV6ZtwDDqj8VoPdnYLQsbTmsQ8_Z-Ltn_zby0IOL/pub" > How to take down a drone (ita)
